Refactor with classes and change reset to a per-snake basis

--- a/stylesheets/sass/main.sass
+++ b/stylesheets/sass/main.sass
@@ -3,10 +3,12 @@ html
   text-align: center
   background: #111
 h1
+  margin-bottom: 0
   font: bold 96px sans-serif
   text-transform: uppercase
   color: #f40
 p
+  margin-top: 0
   font: 18px sans-serif
   color: #555
 canvas
