Fix #8 and a few other small bugs

--- a/stylesheets/sass/main.sass
+++ b/stylesheets/sass/main.sass
@@ -1,20 +1,9 @@
 html
-  padding: 24px
-  text-align: center
-  background: #111
-h1
-  margin-bottom: 0
-  font: bold 96px sans-serif
-  text-transform: uppercase
-  color: #f40
-p
-  margin-top: 0
-  font: 18px sans-serif
-  color: #555
+  color: #525252
+  background: #f2d435
 canvas
   position: absolute
   top: 50%
   left: 50%
   margin: -200px 0 0 -200px
-  border: 24px outset #111
-  box-shadow: 0 0 48px #000
+  border: 1px solid #525252
