--- a/stylesheets/css/main.css
+++ b/stylesheets/css/main.css
@@ -10,12 +10,13 @@ h1, canvas, #scores {
   width: 400px; }
 
 h1 {
-  margin: -231px 0 0 -200px;
+  margin: -272px 0 0 -200px;
+  border-bottom: #525252 solid 4px;
   text-transform: uppercase; }
 
 canvas {
   margin: -200px 0 0 -200px;
-  border: 1px solid #525252; }
+  border: 1px solid #a29343; }
 
 #scores {
   margin: 200px 0 0 -200px; }
